--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,12 @@
         <dependency>
             <groupId>org.drools.planner</groupId>
             <artifactId>drools-planner-examples</artifactId>
-            <version>5.6.0.Final</version>
+            <version>5.4.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools.planner</groupId>
+            <artifactId>drools-planner-core</artifactId>
+            <version>5.4.0.Final</version>
         </dependency>
     </dependencies>
     
